# T-MSIS-Analytic-File-Generation-Python

./: .gitattributes  .gitignore  BSF_Metadata.py  BSF_Runner.py  CODEOWNERS  Dockerfile  ELG.py  ELG00002.py  ELG00003.py  ELG00004.py  ELG00005.py  ELG00006.py  ELG00007.py  ELG00008.py  ELG00009.py  ELG00010.py  ELG00011.py  ELG00012.py  ELG00013.py  ELG00014.py  ELG00015.py  ELG00016.py  ELG00017.py  ELG00018.py  ELG00020.py  ELG00021.py  ELG00022.py  IP.py  IPH.py  IPL.py  IP_Metadata.py  IP_Runner.py  Jenkinsfile  LT.py  LTH.py  LTL.py  LT_Metadata.py  LT_Runner.py  OT.py  OTH.py  (+40 more)
.databricks/clusters/: databricks-sas-taf-conversion-prod.json  databricks-sas-taf-conversion-uat-val.json  databricks-sas-taf-conversion-val.json
.databricks/jobs/: apl_runner.json  apr_runner.json  bsf_runner.json  de_runner.json  ip_runner.json  lt_runner.json  mcp_runner.json  ot_helper.json  ot_runner.json  prv_runner.json  rx_runner.json  up_runner.json
.databricks/notebooks/: apl_runner.ipynb  apr_runner.ipynb  bsf_runner.ipynb  de_runner.ipynb  ip_Runner.ipynb  lt_runner.ipynb  mcp_runner.ipynb  ot_driver.ipynb  ot_runner.ipynb  prv_runner.ipynb  rx_runner.ipynb  up_runner.ipynb
.databricks/stacks/: config.json
.github/: CODEOWNERS  README.md  pull_request_template.md
.github/workflows/: build-and-deploy.yml  generate-codejson.yml
diagrams/: TAF_ID_Diagram.drawio
documentation/: taf_metadata.drawio
notebooks/: TAF DDL v2.sql  TMSIS Monthly Run Id Notebook.ipynb
taf/: TAF.py  TAF_Claims.py  TAF_Closure.py  TAF_Grouper.py  TAF_Metadata.py  TAF_Run_Stack.py  TAF_Runner.py  __init__.py  test_taf_run_stack.py
taf/APL/: APL.py  APL_Runner.py  BASE.py  ENRLMT.py  LCTN.py  OA.py  SAREA.py
taf/APR/: APR.py  APR_Runner.py  BASE.py  BED.py  ENR.py  GRP.py  IDT.py  LIC.py  LOC.py  PGM.py  TAX.py
taf/BSF/: BSF_Metadata.py  BSF_Runner.py  ELG.py  ELG00002.py  ELG00003.py  ELG00004.py  ELG00005.py  ELG00006.py  ELG00007.py  ELG00008.py  ELG00009.py  ELG00010.py  ELG00011.py  ELG00012.py  ELG00013.py  ELG00014.py  ELG00015.py  ELG00016.py  ELG00017.py  ELG00018.py  ELG00020.py  ELG00021.py  ELG00022.py  TPL00002.py
taf/DE/: DE.py  DE0001.py  DE0001BASE.py  DE0002.py  DE0003.py  DE0005.py  DE0006.py  DE0007.py  DE0008.py  DE0009.py  DE_Runner.py
taf/FTX/: FTX.py  FTX_Metadata.py  FTX_Runner.py
taf/IP/: IP.py  IPH.py  IPL.py  IP_DX.py  (+2 more)
test/: GrouperTest.py
unit_testing/: test_BSF_Runner.py  test_BSF_STEP1.py  test_ELG00002.py  test_ELG00003.py  test_ELG00004.py  test_ELG00005.py  test_ELG00006.py  test_ELG00007.py  test_ELG00008.py  test_ELG00009.py  test_ELG00010.py  test_ELG00011.py  test_ELG00012.py  test_ELG00013.py  test_ELG00014.py  test_ELG00015.py  test_ELG00016.py  test_ELG00017.py  test_ELG00018.py  test_ELG00020.py  test_ELG00021.py  test_ELG00022.py  test_Final_BSF.py  test_IP.py  test_IPH.py  test_IPL.py  test_IP_Runner.py  test_LTH.py  test_LTL.py  test_OTH.py  test_OTL.py  test_PRV.py  test_RXH.py  test_RXL.py  test_TAF_Claims.py  test_TAF_Grouper.py  test_TPL00002.py
(+769 files in other folders)
