[build-system]
requires = ["wheel", "setuptools"]

[project]
name = "taf"
dynamic = ["version"]
description = "A package to generate T-MSIS analytic files using Databricks"
readme = "README.md"

authors = [
    {name = "Jesse Beaumont"},
    {name = "Scott Cleeton"},
    {name = "Matt Fury"},
    {name = "Aaron Reba"},
]

license = {file = "license.md"}

classifiers = [
    "Programming Language :: Python :: 3.10.12 :: Only",
    "Intended Audience :: Data Engineers",
    "Intended Audience :: Business Analysts",
]
requires-python = ">=3.10"
dependencies = [
    "black==22.1.0",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.12",
    "click==8.0.4",
    "colorama==0.4.4",
    "databricks-cli==0.18.0",
    "distlib==0.3.4",
    "filelock==3.7.1",
    "flake8==4.0.1",
    "Flask==2.1.2",
    "Flask-Cors==3.0.10",
    "idna==3.3",
    "importlib-metadata==4.11.4",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.1",
    "mccabe==0.6.1",
    "mypy-extensions==0.4.3",
    "networkx==2.8.2",
    "npm==0.1.1",
    "npx==0.1.1",
    "numpy==1.22.3",
    "optional-django==0.1.0",
    "pandas==1.3.4",
    "pathspec==0.9.0",
    "platformdirs==2.5.1",
    "psycopg2==2.9.3",
    "pycodestyle==2.8.0",
    "pyflakes==2.4.0",
    "pyspark==3.4.0",
    "python-dateutil==2.8.2",
    "pytz==2021.3",
    "requests==2.27.1",
    "setuptools==69.0.2",
    "six==1.16.0",
    "sqllineage==1.3.5",
    "sqlparse==0.4.2",
    "tabulate==0.8.9",
    "tomli==2.0.1",
    "typing_extensions==4.1.1",
    "urllib3==1.26.8",
    "virtualenv==20.14.1",
    "Werkzeug==2.1.2",
    "wheel==0.37.0",
    "zipp==3.8.0",
    "awscli==1.27.144",
]

[project.urls]
documentation = "https://id.atlassian.com/login?continue=https%3A%2F%2Fcms-dataconnect.atlassian.net%2Flogin%3FredirectCount%3D1%26dest-url%3D%252Fwiki%252Fspaces%252FTDRI%252Foverview%26application%3Dconfluence&application=confluence"
tracker = "https://cms-dataconnect.atlassian.net/jira/software/projects/TDRI/boards/168/backlog"

[project.optional-dependencies]
val = [
    "autoflake==2.2.1",
    "bandit==1.7.5",
    "isort",
    "pytest",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = { attr = "taf.__version__" }

[tool.setuptools.packages.find]
# Do this to include all packages recursively without warnings.
include = ["taf", "taf.*"]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
profile = "black"

[tool.flake8]
max-line-length = 99
exclude = [".venv*", "venv*", "VE", "typings"]
extend-ignore = ["E203", "E501"]
extend-select = ["B950"]
# These are things that databricks injects into python's globals(), and that we
# use directly without importing anything. Don't let flake8 complain about them.
builtins = [
    "dbutils",
    "display",
    "displayHTML",
    "getArgument",
    "get_ipython",
    "sc",
    "spark",
    "sqlContext",
    "sql",
    "table",
    "udf",
]

